k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: micro-app
          image: docker.io/library/micro-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
